@@ -38,6 +38,10 @@
 <p>2017-07-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/map.c (WriteMAPImage): Fix null pointer dereference or
+segmentation violation in the MAP writer if the input image is not
+already colormapped.  Problem was reported by LCatro via email on
+July 18.</li>
 <li>coders/gray.c (WriteGRAYImage): Improve tracing and tidy up.</li>
 <li>coders/rgb.c (WriteRGBImage): Fix heap overwrite in raw RGB
 writer (all output subformats) given a multiframe sequence using
